--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-validator": "^6.14.2",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.2",
+    "mongoose-unique-validator": "^3.1.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
